--- a/james.html
+++ b/james.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<div align=center><img src="../IMG_3840.jpeg" width="403" height="537" alt=""/></div>
+<div align=center><img src="IMG_3840.jpeg" width="403" height="537" alt=""/></div>
 <p>&nbsp;</p>
 <map name="Map">
   <area shape="rect" coords="1,1,49,49" href="mailto:info@alacritysemi.com">
